--- a/index.html
+++ b/index.html
@@ -3,12 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood</title>
+    <title>Accueil - ohmyfood</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>OUFZOUHuhufhue</h1>
-    <h2>FONIUIBIBIO</h2>
-    <h3>kldfjglmsjgmsdlfjg</h3>
+    <header>
+        <h1>ohmyfood</h1>
+    </header>
+    <main>
+        <section>
+            <section id="secplace">
+                <div id="divplace">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Paris, Belleville</p>
+                </div>
+            </section>
+            <section id="secsearch">
+                <div id="divsearch">
+                    <h2>Réservez le menu qui cous convient</h2>
+                    <p>Découvrez des restaurants d'exeption, sélectionnés par nos soins.</p>
+                    <button>Explorez nos restaurant</button>
+                </div>
+            </section>
+        </section>
+        <section>
+
+            <ol>
+                <h2>Fonctionnement</h2>
+                <li><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
+                <li><i class="fa-list-ul fas"></i>Composez votre menu</li>
+                <li><i class="fa-store fas"></i>Dégustez au restaurant</li>
+            </ol>
+
+        </section>
+        <section>
+            <h2>Restaurants</h2>
+            <a href="la-palette-du-gout.html">
+                <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
+                <div>
+                    <h3>La palette du goût</h3>
+                    <p>Menilmontant</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+            <a href="la-note-enchantee.html">
+                <img src="ressources\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
+                <div>
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+            <a href="a-la-francaise.html">
+                <img src="ressources\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
+                <div>
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+            <a href="le-delice-des-sens.html">
+                <img src="ressources\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
+                <div>
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Mélicourt</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <h4>ohmyfood</h4>
+            <li>Proposer un restaurant</li>
+            <li>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Concact</li>
+        </ul>
+    </footer>
 </body>
 </html>
