--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </section>
             <section id="secsearch">
                 <div id="divsearch">
-                    <h2>Réservez le menu qui cous convient</h2>
+                    <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exeption, sélectionnés par nos soins.</p>
                     <button>Explorez nos restaurant</button>
                 </div>
@@ -43,7 +43,7 @@
                 <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
                 <div>
                     <h3>La palette du goût</h3>
-                    <p>Menilmontant</p>
+                    <p>Ménilmontant</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
