--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <title>Accueil - ohmyfood</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1 class="shrikhand">ohmyfood</h1>
     </header>
     <main>
         <section>
-            <section id="secplace">
-                <div id="divplace">
+            <section class="sec-place">
+                <div class="sec-place__div">
                     <i class="fas fa-map-marker-alt"></i>
                     <p>Paris, Belleville</p>
                 </div>
             </section>
-            <section id="secsearch">
-                <div id="divsearch">
+            <section class="sec-explore">
+                <div class="sec-explore__div">
                     <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exeption, sélectionnés par nos soins.</p>
                     <button>Explorez nos restaurant</button>
                 </div>
             </section>
         </section>
-        <section>
-
-            <ol>
+        <section class="sec-fonction">
+            <ol class="sec-fonction__ol">
                 <h2>Fonctionnement</h2>
                 <li><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
                 <li><i class="fa-list-ul fas"></i>Composez votre menu</li>
@@ -37,47 +37,65 @@
             </ol>
 
         </section>
-        <section>
+        <section class="sec-rest">
             <h2>Restaurants</h2>
-            <a href="la-palette-du-gout.html">
-                <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
-                <div>
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-            <a href="la-note-enchantee.html">
-                <img src="ressources\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
-                <div>
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-            <a href="a-la-francaise.html">
-                <img src="ressources\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
-                <div>
-                    <h3>À la française</h3>
-                    <p>Cité Rouge</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-            <a href="le-delice-des-sens.html">
-                <img src="ressources\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
-                <div>
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Mélicourt</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
+            <div class="sec-rest__grid-container">
+
+                <a href="la-palette-du-gout.html" class="link-resto">
+                    <p class="link-resto__new">Nouveau</p>
+                    <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
+                    <div class="link-resto__description">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+
+                    </div>
+                </a>
+                <a href="la-note-enchantee.html" class="link-resto">
+                    <p class="link-resto__new">Nouveau</p>
+                    <img src="ressources\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
+                    <div class="link-resto__description">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="a-la-francaise.html" class="link-resto">
+                    <img src="ressources\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
+                    <div class="link-resto__description">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                        <div >
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="le-delice-des-sens.html" class="link-resto">
+                    <img src="ressources\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
+                    <div class="link-resto__description">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Mélicourt</p>
+                        <div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </section>
     </main>
     <footer>
-        <ul>
-            <h4>ohmyfood</h4>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
+        <ul class="footer-list">
+            <h4 class="shrikhand">ohmyfood</h4>
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Concact</li>
         </ul>
