--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -1,21 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -36,11 +18,11 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="..\public\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française photo restaurant">
+            <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
-                <h2 class="shrikhand">La note enchantée</h2>
+                <h2 class="shrikhand">À la française</h2>
                 <div class="heart-container">
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
@@ -190,7 +172,7 @@
     </main>
     <footer>
         <ul class="footer-list">
-            <h4 class="shrikhand">ohmyfood</h4>
+            <li class="footer-title"><h4 class="shrikhand">ohmyfood</h4></li>
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
