--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="sec-place">
                 <div class="sec-place__div">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Paris, Belleville</p>
+                    <h2>Paris, Belleville</h2>
                 </div>
             </section>
             <section class="sec-explore">
@@ -30,10 +30,10 @@
         </section>
         <section class="sec-fonction">
             <ol class="sec-fonction__ol">
-                <h2>Fonctionnement</h2>
-                <li><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
-                <li><i class="fa-list-ul fas"></i>Composez votre menu</li>
-                <li><i class="fa-store fas"></i>Dégustez au restaurant</li>
+                <li class="fonc-titre"><h2>Fonctionnement</h2></li>
+                <li class="fonc-carte"><i class="fa-mobile-alt fas"></i>Choisissez un restaurant</li>
+                <li class="fonc-carte"><i class="fa-list-ul fas"></i>Composez votre menu</li>
+                <li class="fonc-carte"><i class="fa-store fas"></i>Dégustez au restaurant</li>
             </ol>
 
         </section>
@@ -43,7 +43,7 @@
 
                 <a href="la-palette-du-gout.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="..\public\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
+                    <img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
                     <div class="link-resto__description">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -56,7 +56,7 @@
                 </a>
                 <a href="la-note-enchantee.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="..\public\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
+                    <img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
                     <div class="link-resto__description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
@@ -67,7 +67,7 @@
                     </div>
                 </a>
                 <a href="a-la-francaise.html" class="link-resto">
-                    <img src="..\public\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
+                    <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
                     <div class="link-resto__description">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
@@ -78,7 +78,7 @@
                     </div>
                 </a>
                 <a href="le-delice-des-sens.html" class="link-resto">
-                    <img src="..\public\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
+                    <img src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
                     <div class="link-resto__description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Mélicourt</p>
@@ -93,7 +93,7 @@
     </main>
     <footer>
         <ul class="footer-list">
-            <h4 class="shrikhand">ohmyfood</h4>
+            <li class="footer-title"><h4 class="shrikhand">ohmyfood</h4></li>
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
