--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="..\public\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="thumbnail" alt="La note enchantee photo restaurant">
+            <img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="thumbnail" alt="La note enchantee photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
@@ -186,7 +186,7 @@
     </main>
     <footer>
         <ul class="footer-list">
-            <h4 class="shrikhand">ohmyfood</h4>
+            <li class="footer-title"><h4 class="shrikhand">ohmyfood</h4></li>
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
