--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="..\public\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
+            <img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
@@ -29,7 +29,7 @@
                 </div>
             </section>
             <section class="sec-menu__main">
-                <section>
+                <section class="sec-item-container">
                     <h3 class="menu-titre">ENTRÉES</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -74,7 +74,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container">
                     <h3 class="menu-titre">PLATS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -119,7 +119,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container">
                     <h3 class="menu-titre">DESSERTS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -172,7 +172,7 @@
     </main>
     <footer>
         <ul class="footer-list">
-            <h4 class="shrikhand">ohmyfood</h4>
+            <li class="footer-title"><h4 class="shrikhand">ohmyfood</h4></li>
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
