All Anims done verifs to do

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française photo restaurant">
+            <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="thumbnail" alt="À la française photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
@@ -29,7 +29,7 @@
                 </div>
             </section>
             <section class="sec-menu__main">
-                <section>
+                <section class="sec-item-container  entrees">
                     <h3 class="menu-titre">ENTRÉES</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -74,7 +74,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container  plats">
                     <h3 class="menu-titre">PLATS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -119,7 +119,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container  desserts">
                     <h3 class="menu-titre">DESSERTS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -176,7 +176,7 @@
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Concact</li>
+            <li><a href="mailto:placeholder@example.com">Concact</a></li>
         </ul>
     </footer>
 </body>
