--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+    <div class="loader">
+        <div>
+        </div>
+    </div>
     <header>
         <h1 class="shrikhand">ohmyfood</h1>
     </header>
@@ -97,7 +101,7 @@
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Concact</li>
+            <li><a href="mailto:placeholder@example.com">Concact</a></li>
         </ul>
     </footer>
 </body>
