--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -29,7 +29,7 @@
                 </div>
             </section>
             <section class="sec-menu__main">
-                <section>
+                <section class="sec-item-container  entrees">
                     <h3 class="menu-titre">ENTRÉES</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -88,7 +88,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container  plats">
                     <h3 class="menu-titre">PLATS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -133,7 +133,7 @@
                         </div>
                     </a>
                 </section>
-                <section>
+                <section class="sec-item-container  desserts">
                     <h3 class="menu-titre">DESSERTS</h3>
                     <a href="#" class="menu-item">
                         <div class="menu-item__content">
@@ -190,7 +190,7 @@
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Concact</li>
+            <li><a href="mailto:placeholder@example.com">Concact</a></li>
         </ul>
     </footer>
 </body>
