last version all anims

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="thumbnail" alt="À la française photo restaurant">
+            <img src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="thumbnail" alt="À la française photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
