--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="thumbnail" alt="À la française photo restaurant">
+            <img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="thumbnail" alt="À la française photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
