--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 <li class="fonc-carte"><i class="fa-list-ul fas"></i>Composez votre menu</li>
                 <li class="fonc-carte"><i class="fa-store fas"></i>Dégustez au restaurant</li>
             </ol>
-
         </section>
         <section class="sec-rest">
             <h2>Restaurants</h2>
@@ -47,7 +46,7 @@
 
                 <a href="la-palette-du-gout.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
+                    <img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
                     <div class="link-resto__description">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -60,7 +59,7 @@
                 </a>
                 <a href="la-note-enchantee.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
+                    <img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
                     <div class="link-resto__description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
@@ -71,7 +70,7 @@
                     </div>
                 </a>
                 <a href="a-la-francaise.html" class="link-resto">
-                    <img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
+                    <img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
                     <div class="link-resto__description">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
@@ -82,7 +81,7 @@
                     </div>
                 </a>
                 <a href="le-delice-des-sens.html" class="link-resto">
-                    <img src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
+                    <img src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
                     <div class="link-resto__description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Mélicourt</p>
