--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="thumbnail" alt="La note enchantee photo restaurant">
+            <img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="thumbnail" alt="La note enchantee photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
