--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
+            <img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
